--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
             <div class="todo-container" id="todoContainer">
 
                 <div class="task">
-                    <input class="ckeck" type="checkbox" name="" id="">
-                    <p class="title-task">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus praesentium magnam quaerat
+                    <input class="check" type="checkbox" name="" id="">
+                    <p class="title-task">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus praesentium
+                        magnam quaerat
                         nesciunt quibusdam aliquam adipisci, cumque qui, aliquid ad ex nobis suscipit architecto animi
                         ipsum alias earum possimus odio.</p>
                     <div class="options">
@@ -69,23 +70,28 @@
         <section class="section-add-todo" id="sectionAddTodo">
             <div class="add-todo">
                 <form class="add-todo-form" id="addForm" autocomplete="off">
+
                     <div class="extras" id="extras">
-                        <div class="categoria">
-                            <button></button>
-                            <select name="categorias" id="categorias">
-                                <!-- TODO -->
-                            </select>
-                        </div>
-                        <div class="data-incial">
-                            <span>Criado em: </span>
-                            <input type="text" name="data" id="data" readonly></input>
+                        <div>
+                            <div class="categoria">
+                                <button></button>
+                                <select name="categorias" id="categorias">
+                                    <!-- TODO -->
+                                </select>
+                            </div>
+
+                            <div class="data-incial">
+                                <span>Criado em: </span>
+                                <input type="text" name="data" id="data" readonly></input>
+                            </div>
                         </div>
                     </div>
 
                     <div class="add-task" id="addTask">
-                        <textarea id="addTaskInput" name="title" maxlength="150" placeholder="Adicionar tarefa"></textarea>
+                        <textarea id="addTaskInput" name="title" maxlength="150" rows="1"
+                            placeholder="Adicionar tarefa"></textarea>
                         <button type="submit">
-                            <i class="fas fa-arrow-circle-up"></i>
+                            <i class="far fa-arrow-up"></i>
                         </button>
                     </div>
 
