--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <label for="searchInput">
                         <i class="fas fa-search"></i>
                     </label>
-                    <input class="search-input" id="searchInput" type="text" placeholder="Pesquisar">
+                    <input class="search-input" id="searchInput" type="search" placeholder="Pesquisar">
                 </div>
                 <div class="filter">
                     <button class="filter-btn">
