--- a/index.html
+++ b/index.html
@@ -8,16 +8,27 @@
 
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.15.1/css/all.css">
-    <link rel="shortcut icon" href="#" type="image/x-icon"> <!-- TODO -->
+    <link rel="shortcut icon" href="#" type="image/x-icon"> 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    
+    <!-- TODO -->
 
     <script src="./js/index.js" defer></script>
 
     <title>Checkpoint2</title>
 </head>
 
-<body>
+<body id="fundo">
 
     <header>
+        <!-- INÍCIO BOTÃO DARK MODE -------------------------------------------------- -->
+        <div class="btn-bk form-check form-switch">
+            <input onclick="mudarCor(this)" class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+            <label class="form-check-label" for="flexSwitchCheckDefault">Dark Mode</label>
+          </div>
+          <!-- FIM BOTÃO DARK MODE -------------------------------------------------- -->
+
         <div class="container">
             <div class="title">
                 <h1>Titulo</h1>
@@ -25,7 +36,7 @@
             <div class="wrap">
                 <div class="search" id="search">
                     <label for="searchInput">
-                        <i class="fas fa-search"></i>
+                        <i class="fas fa-search" style="color:black"></i>
                     </label>
                     <input class="search-input" id="searchInput" type="search" placeholder="Pesquisar">
                 </div>
