--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
         <div class="btn-bk form-check form-switch">
             <input onclick="mudarCor(this)" class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
             <label class="form-check-label" for="flexSwitchCheckDefault">Dark Mode</label>
-          </div>
+        </div>
           <!-- FIM BOTÃO DARK MODE -------------------------------------------------- -->
 
         <div class="container">
             <div class="title">
-                <h1>Titulo</h1>
+                <h1>Keep Notes</h1>
             </div>
             <div class="wrap">
                 <div class="search" id="search">
