--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                             </div>
 
                             <div class="data-incial">
-                                <span>Criado em: </span>
+                                <span style="color:black">Criado em: </span>
                                 <input type="text" name="data" id="data" readonly></input>
                             </div>
                         </div>
