adicionado funcao remover task com confirmacao

--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
                         ipsum alias earum possimus odio.</p>
                     <div class="options">
                         <span class="id-task">id:01</span>
-                        <button class="edit-button">
+                        <!-- <button class="edit-button">
                             <i class="fas fa-pen"></i>
-                        </button>
+                        </button> -->
                         <button id="delete-button" class="delete-button">
                             <i class="fas fa-trash-alt"></i>
                         </button>
@@ -79,7 +79,7 @@
                         <div class="container-sim-nao">
                             <p>Deseja realmente excluir?</p>
                             <div>
-                                <button class="sim-delete" type="button" >SIM</button>
+                                <button id="sim-delete" class="sim-delete" type="button" >SIM</button>
                                 <button class="nao-delete" type="button" >NÃO</button>
                             </div> 
                         </div>
