--- a/index.html
+++ b/index.html
@@ -22,10 +22,19 @@
 <body id="fundo">
 
     <header>
+
         <!-- INÍCIO BOTÃO DARK MODE -------------------------------------------------- -->
-        <div class="btn-bk form-check form-switch">
-            <input onclick="mudarCor(this)" class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
-            <label class="form-check-label" for="flexSwitchCheckDefault">Dark Mode</label>
+        <div id="menu-superior">
+            
+            <div class="btn-bk form-check form-switch">
+                <input onclick="mudarCor(this)" class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                <label class="form-check-label" for="flexSwitchCheckDefault">Dark Mode</label>
+            </div>
+            <div id="api-button">
+                <a href="./json.html">
+                    <img src="./img/api.png" alt="api button">
+                </a>
+            </div>
         </div>
           <!-- FIM BOTÃO DARK MODE -------------------------------------------------- -->
 
@@ -88,6 +97,7 @@
                 </div>
 
             </div>
+
         </section>
 
         <section class="section-add-todo" id="sectionAddTodo">
