correção de cores no darkmode

--- a/index.html
+++ b/index.html
@@ -109,7 +109,9 @@
                             <div class="categoria">
                                 <button></button>
                                 <select name="categorias" id="categorias">
-                                    <!-- TODO -->
+                                    <option value="">Mercado</option>
+                                    <option value="">Digital House</option>
+                                    <option value="">Filmes</option>
                                 </select>
                             </div>
 
