--- a/json.html
+++ b/json.html
@@ -19,7 +19,7 @@
     <title>Checkpoint2</title>
 </head>
 
-<body id="fundo">
+<body>
 
     <header>
         <!-- INÍCIO BOTÃO DARK MODE -------------------------------------------------- -->
