--- a/json.html
+++ b/json.html
@@ -67,11 +67,13 @@
         <section id="api-container">
             
         </section>
-
-        <footer>
-            <p>Tudo nosso, nada deles</p>
-        </footer>
+   
     </main>
+
+      <footer>
+ 
+        <a href="./equipe.html">Sobre a Equipe</a>
+      </footer>
 
 
 
