ajuste layout equipe

--- a/equipe.html
+++ b/equipe.html
@@ -76,7 +76,7 @@
                 </div>
             </div>
 
-            <div class="card__container bd-container">
+            <div id="equipe02" class="card__container bd-container">
                 <div class="card__glass">
                     <img src="assets/img/Carlindo Junior.jfif" alt="" class="card__img">
     
