add focus no input de adicionar todo

--- a/index.html
+++ b/index.html
@@ -113,9 +113,10 @@
                             <div class="categoria">
                                 <button></button>
                                 <select name="categorias" id="categorias">
-                                    <option value="">Mercado</option>
-                                    <option value="">Digital House</option>
-                                    <option value="">Filmes</option>
+                                    <option value=""></option>
+                                    <option value="Mercado">Mercado</option>
+                                    <option value="Digital house">Digital House</option>
+                                    <option value="Filmes">Filmes</option>
                                 </select>
                             </div>
 
