--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.15.1/css/all.css">
     <link rel="stylesheet" href="http://fonts.cdnfonts.com/css/bariol-regular-2?styles=29982">
                 
-                
     <link rel="shortcut icon" href="#" type="image/x-icon"> 
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -20,7 +19,7 @@
 
     <script src="./js/index.js" defer></script>
 
-    <title>Checkpoint2</title>
+    <title>tumdum</title>
 </head>
 
 <body id="fundo">
