nome do projeto

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <script src="./js/index.js" defer></script>
 
-    <title>tumdum</title>
+    <title>TO DO</title>
 </head>
 
 <body id="fundo">
