--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.15.1/css/all.css">
-    <link rel="stylesheet" href="http://fonts.cdnfonts.com/css/bariol-regular-2?styles=29982">
                 
     <link rel="shortcut icon" href="#" type="image/x-icon"> 
 
@@ -19,7 +18,7 @@
 
     <script src="./js/index.js" defer></script>
 
-    <title>TO DO</title>
+    <title>tumdum</title>
 </head>
 
 <body id="fundo">
