--- a/json.html
+++ b/json.html
@@ -8,15 +8,14 @@
 
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.15.1/css/all.css">
-    <link rel="stylesheet" href="http://fonts.cdnfonts.com/css/bariol-regular-2?styles=29982">
-
-    <link rel="shortcut icon" href="#" type="image/x-icon"> 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
     integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+
+    <link rel="shortcut icon" href="./img/zennote-icon.svg" type="image/x-icon"> 
 
     <script src="./js/json.js" defer></script>
 
-    <title>tumtum</title>
+    <title>zen note</title>
 </head>
 
 <body>
