style theme mode handle

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <header>
             <div id="menu-superior">
                 
-                <div class="btn-bk form-check form-switch">
+                <div id="switch-theme">
                     <label for="handleTheme" id="theme-icons" class="material-icons">brightness_4</label>
                     <input id="handleTheme" class="form-check-input" type="checkbox" onclick="handleTheme(this)">
                 </div>
