--- a/equipe.html
+++ b/equipe.html
@@ -16,7 +16,7 @@
 
     
         <div id="button-voltar">
-            <a href="./json.html">
+            <a href="./api.html">
                 <img src="assets/img/icons8-go-back-30.png" alt="">
             </a>
         </div>
