--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </div>
                 
                 <div id="api-button">
-                    <a href="./json.html">
+                    <a href="./api.html">
                         <span class="material-icons">auto_awesome</span>
                     </a>
                 </div>
