fix createTask html and turn off the textarea resize

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
                     <div class="task">
                         <input class="check" type="checkbox">
-                        <p class="title-task">Enim voluptatem et et corporis magni eum. Laboriosam nostrum fugiat dolores reprehenderit reiciendis et unde libero. Quo minus voluptatum fuga.</p>
+                        <p class="title-task">Clicando no checkbox você marca a nota como concluída. No canto inferior direito você pode mudar a cor da nota. Clique na lixeira para excluir.</p>
                         <div class="options">
                             <span class="id-task">id: 0</span>
                             <span class="task-color green" title="green"></span>
@@ -115,7 +115,7 @@
                         </div>
 
                         <div class="add-task" id="addTask">
-                            <form id="text-form">
+                            <form id="text-form" action="">
                                 <textarea id="addTaskInput" name="title" maxlength="150" rows="1"
                                     placeholder="Adicionar nota"></textarea>
                                 <button type="submit">
