add categories section

--- a/index.html
+++ b/index.html
@@ -52,8 +52,16 @@
                     <div class="filter">
                         <button class="filter-btn">
                             <span class="material-icons">filter_list</span>
-                            <span>Filtros</span>
+                            <span>Filtrar</span>
                         </button>
+                    </div>
+
+                    <div id="categories-container">
+                        <div id="categories-header">
+                            <span id="close-categories" class="far fa-arrow-right"></span>
+                            <h3>Categorias</h3>
+                            <span></span>
+                        </div>
                     </div>
 
                 </div>
